fixed padding on mobile buttons

--- a/css/timeline.css
+++ b/css/timeline.css
@@ -256,7 +256,7 @@
     display: none;
   }
   .agenda li {
-	padding: -14px;
+	padding: 5px;
 }
 
 }
